--- a/client/templates/main.html
+++ b/client/templates/main.html
@@ -13,7 +13,7 @@
                     {{> header}}
 
                     <div class="inner cover">
-                        {{> UI.dynamic template=myTemplate}}
+                        {{> yield}}
                     </div>
 
                     <div class="mastfoot">
