added Button Animation

--- a/client/templates/gamesTable.html
+++ b/client/templates/gamesTable.html
@@ -1,5 +1,5 @@
 <template name="games">
-<table class="table table-striped">
+<table class="table">
     <thead>
       <tr>
         <th>Spiel</th>
