--- a/client/templates/drinksTable.html
+++ b/client/templates/drinksTable.html
@@ -1,5 +1,5 @@
 <template name="drinks">
-    <table class="table table-striped">
+    <table class="table">
         <thead>
             <tr>
                 <th>Spiel</th>
