all dialogs skeletons implemented

--- a/client/templates/header.html
+++ b/client/templates/header.html
@@ -8,7 +8,7 @@
                 <li id="generator" class="{{#if currentRouteIs 'generator'}}active{{/if}}"><a href="{{pathFor route='generator'}}">Zufallsgenerator</a></li>
                 <li id="games" class="{{#if currentRouteIs 'games'}}active{{/if}}"><a href="{{pathFor route='games'}}">Spiele</a></li>
                 <li id="drinks" class="{{#if currentRouteIs 'drinks'}}active{{/if}}"><a href="{{pathFor route='drinks'}}">Getränke</a></li>
-                <li id="player" class="{{#if currentRouteIs 'player'}}active{{/if}}"><a href="{{pathFor route='players'}}">Barkeeper</a></li>
+                <li id="player" class="{{#if currentRouteIs 'player'}}active{{/if}}"><a href="{{pathFor route='player'}}">Barkeeper</a></li>
             </ul>
         </nav>
     </div>
