--- a/client/templates/newGame.html
+++ b/client/templates/newGame.html
@@ -1,7 +1,4 @@
-<template name="newGameForm">
-    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myGameModal">
-        Neues Spiel hinzufügen
-    </button>
+<template name="newGame">
     <div class="modal fade" id="myGameModal" tabindex="-1" role="dialog">
         <div class="modal-dialog">
             <div class="modal-content">
