--- a/client/templates/newPlayer.html
+++ b/client/templates/newPlayer.html
@@ -1,10 +1,10 @@
-<template name="newDrink">
-    <div class="modal fade" id="myDrinkModal" tabindex="-1" role="dialog">
+<template name="newPlayer">
+    <div class="modal fade" id="myPlayerModal" tabindex="-1" role="dialog">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title">Neues Getränk hinzufügen</h4>
+                    <h4 class="modal-title">Neuen Barkeeper hinzufügen</h4>
                 </div>
                 <form class="form-horizontal" role="form">
 
