--- a/client/templates/gamesTable.html
+++ b/client/templates/gamesTable.html
@@ -1,4 +1,7 @@
 <template name="games">
+    <p class="lead">
+        <button class="btn btn-lg btn-default" data-toggle="modal" data-target="#myGameModal">Spiel hinzufügen</button>
+    </p>
 <table class="table">
     <thead>
       <tr>
@@ -25,5 +28,6 @@
       </tr>
     </tbody>
   </table>
+  {{> newGame}}
 
   </template>
