--- a/client/templates/playerTable.html
+++ b/client/templates/playerTable.html
@@ -1,6 +1,6 @@
-<template name="drinks">
+<template name="player">
     <p class="lead">
-        <button class="btn btn-lg btn-default" data-toggle="modal" data-target="#myDrinkModal">Getränk hinzufügen</button>
+        <button class="btn btn-lg btn-default" data-toggle="modal" data-target="#myPlayerModal">Barkeeper hinzufügen</button>
     </p>
     <table class="table">
         <thead>
@@ -31,7 +31,6 @@
             </tr>
         </tbody>
     </table>
-
-    {{> newDrink}}
+    {{> newPlayer}}
 
 </template>
