--- a/client/templates/player.html
+++ b/client/templates/player.html
@@ -15,7 +15,7 @@
             <tr>
                 <td>{{name}}</td>
                 <td>{{keptBar}}</td>
-                <td><button type="button" class="btn btn-xs btn-danger">
+                <td><button type="button" id="delete" class="btn btn-xs btn-danger">
                     <span class="glyphicon glyphicon-trash"></span>&nbsp;
                 </button>
             </td>
