--- a/client/templates/drinks.html
+++ b/client/templates/drinks.html
@@ -5,30 +5,20 @@
     <table class="table">
         <thead>
             <tr>
-                <th>Spiel</th>
-                <th>Genre</th>
+                <th>Getränk</th>
                 <th>Edit</th>
             </tr>
         </thead>
         <tbody>
+            {{#each drinks}}
             <tr>
-                <td>John</td>
-                <td>Doe</td>
-                <td><span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-</td>
+                <td>{{drink}}</td>
+                <td><button id="delete" type="button" class="btn btn-xs btn-danger">
+                    <span class="glyphicon glyphicon-trash"></span>&nbsp;
+                </button>
+            </td>
             </tr>
-            <tr>
-                <td>Mary</td>
-                <td>Moe</td>
-                <td><span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-</td>
-            </tr>
-            <tr>
-                <td>July</td>
-                <td>Dooley</td>
-                <td><span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                </td>
-            </tr>
+            {{/each}}
         </tbody>
     </table>
 
