--- a/client/templates/games.html
+++ b/client/templates/games.html
@@ -15,7 +15,7 @@
         <tr>
             <td>{{game}}</td>
             <td>{{genre}}</td>
-            <td><button type="button" class="btn btn-xs btn-danger">
+            <td><button type="button" id="delete" class="btn btn-xs btn-danger">
                 <span class="glyphicon glyphicon-trash"></span>&nbsp;
             </button>
         </td>
