--- a/client/templates/generator.html
+++ b/client/templates/generator.html
@@ -14,9 +14,9 @@
         </thead>
         <tbody>
             <tr>
-                <td>Falatout</td>
-                <td>Pfeffi</td>
-                <td>Björn</td>
+                <td>{{currentGame.game}}</td>
+                <td>{{currentDrink.drink}}</td>
+                <td>{{currentPlayer.name}}</td>
             </tr>
         </tbody>
     </table>
