--- a/client/templates/generator.html
+++ b/client/templates/generator.html
@@ -4,7 +4,7 @@
     <p class="lead">
         <div class="btn btn-lg btn-default countdown">Zufall, entscheide!</div>
     </p>
-    <table class="table">
+    <table class="table hallo {{animate}}">
         <thead>
             <tr>
                 <th>Spiel</th>
