--- a/client/templates/generator.html
+++ b/client/templates/generator.html
@@ -2,7 +2,7 @@
     <h1 class="cover-heading">Nächste Runde!</h1>
     <p class="lead">Mit einem Klick werden das nächste <u>Spiel</u>, der nächste <u>Barkeeper</u> und das nächste <u>Getränk</u> bestimmt.</p>
     <p class="lead">
-        <div class="btn btn-lg {{#if nextRound}}btn-default{{else}}btn-disabled{{/if}} countdown">Zufall, entscheide!</div>
+        <div class="btn btn-lg {{#if nextRound}}btn-default{{else}}disabled{{/if}} countdown">{{waitForVotes}}</div>
     </p>
     <p class="lead hallo {{animate}}">
         <div class="">Aktuelle Abstimmung:</div>
