some code refreshing

--- a/client/templates/generator.html
+++ b/client/templates/generator.html
@@ -27,8 +27,8 @@
         </tbody>
     </table>
     <p class="lead hallo {{animate}}">
-        <div id="yo" class="btn {{#if pollYo}}btn-success{{else}}btn-default{{/if}} ">Risch Geil: {{pro}}</div>
-        <div id="no" class="btn {{#if pollNo}}btn-danger{{else}}btn-default{{/if}}">Nochmal: {{contra}}</div>
+        <div id="yo" class="btn {{#if pollYo}}btn-success{{else}}btn-default{{/if}} ">Risch Geil: {{countYo}}</div>
+        <div id="no" class="btn {{#if pollNo}}btn-danger{{else}}btn-default{{/if}}">Nochmal: {{countNo}}</div>
     </p>
     <p class="lead">
         <div class="">Archiv:</div>
