--- a/client/templates/generator.html
+++ b/client/templates/generator.html
@@ -1,54 +1,87 @@
 <template name="generator">
-    <h1 class="cover-heading">Nächste Runde!</h1>
-    <p class="lead">Mit einem Klick werden das nächste <u>Spiel</u>, der nächste <u>Barkeeper</u> und das nächste <u>Getränk</u> bestimmt.</p>
-    <p class="lead">
-        {{#if nextRound}}
-        <div class="btn btn-lg btn-default countdown">Nochmal!</div>
-        {{/if}}
-    </p>
-    <p class="lead hallo {{animate}}">
-        <div class="">Aktuelle Abstimmung:</div>
-    </p>
+    <div class="myFrame">
+        <p class="lead hallo {{animate}}">
+            <div class="">Aktuelles Spiel:</div>
+        </p>
 
-    <table class="table hallo {{animate}}">
-        <thead>
-            <tr>
-                <th>Spiel</th>
-                <th>Getränk</th>
-                <th>Barkeeper</th>
-                <th class="hidden-xs">Datum</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>{{gameById currentMatch.game}}</td>
-                <td>{{drinkById currentMatch.drink}}</td>
-                <td>{{playerById currentMatch.player}}</td>
-                <td class="hidden-xs">{{formatTime currentMatch.createdAt}}</td>
-            </tr>
-        </tbody>
-    </table>
-    <p class="lead hallo {{animate}}">
-        <div id="yo" class="btn {{#if pollYo}}btn-success{{else}}btn-default{{/if}} ">Risch Geil: {{countYo}}</div>
-        <div id="no" class="btn {{#if pollNo}}btn-danger{{else}}btn-default{{/if}}">Nochmal: {{countNo}}</div>
-    </p>
-    <p class="lead">
-        <div class="">Archiv:</div>
-    </p>
-    <table class="table">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Spiel</th>
+                    <th>Getränk</th>
+                    <th>Barkeeper</th>
+                    <th class="hidden-xs">Wann</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>{{gameById selectedMatch.game}}</td>
+                    <td>{{drinkById selectedMatch.drink}}</td>
+                    <td>{{playerById selectedMatch.player}}</td>
+                    <td class="hidden-xs">{{formatTime selectedMatch.createdAt}}</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="myFrame">
+
+        <h1 class="cover-heading">Nächste Runde!</h1>
+        <p class="lead">Mit einem Klick werden das nächste <u>Spiel</u>, der nächste <u>Barkeeper</u> und das nächste <u>Getränk</u> bestimmt.</p>
+
+        <p class="lead hallo {{animate}}">
+            <div class="">Abstimmung:</div>
+        </p>
+
+        <table class="table hallo {{animate}}">
+            <thead>
+                <tr>
+                    <th>Spiel</th>
+                    <th>Getränk</th>
+                    <th>Barkeeper</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>{{gameById currentMatch.game}}</td>
+                    <td>{{drinkById currentMatch.drink}}</td>
+                    <td>{{playerById currentMatch.player}}</td>
+                </tr>
+            </tbody>
+        </table>
+        <p class="lead hallo {{animate}}">
+            <div id="yo" class="btn {{#if pollYo}}btn-success{{else}}btn-default{{/if}} ">Risch Geil: {{countYo}}</div>
+            <div id="no" class="btn {{#if pollNo}}btn-danger{{else}}btn-default{{/if}}">Nochmal: {{countNo}}</div>
+        </p>
+        <p class="lead">
+            {{#if nextRound}}
+            <div class="btn btn-lg btn-default countdown">Nochmal!</div>
+            {{/if}}
+        </p>
+
+    </div>
 
 
-        <tbody>
+    <div class="myFrame">
 
-            {{#each matches}}
-            <tr>
-                <td>{{gameById game}}</td>
-                <td>{{drinkById drink}}</td>
-                <td>{{playerById player}}</td>
-                <td class="hidden-xs">{{formatTime createdAt}}</td>
-                <td></td>
-            </tr>
-            {{/each}}
-        </tbody>
-    </table>
+        <p class="lead hallo">
+            <div class="">Archiv:</div>
+        </p>
+        <table class="table">
+
+
+            <tbody>
+
+                {{#each matches}}
+                <tr>
+                    <td>{{gameById game}}</td>
+                    <td>{{drinkById drink}}</td>
+                    <td>{{playerById player}}</td>
+                    <td class="hidden-xs">{{formatTime createdAt}}</td>
+                    <td></td>
+                </tr>
+                {{/each}}
+            </tbody>
+        </table>
+    </div>
+
 </template>
